Update main.css: Fix word-wrap
Issue: freeCodeCamp link isn't wrapped in mobile Chrome browser
Fix (according to ChatGPT) white-space: normal

--- a/main.css
+++ b/main.css
@@ -139,6 +139,7 @@ nav a:hover {
 }
 
 .project-tile > ul {
+  white-space: normal;
   list-style: none;
   text-align: left;
   padding: 1em;
